<resources>
    <string name="app_name">HitTheCooks</string>
    <string name="userImageDescription">Imagen de avatar del usuario</string>
    <string name="shoppingListTitle">Título de la lista</string>
    <string name="addList">Crear lista</string>
    <string name="deletionConfirmation">Esta acción no se puede revertir,y se eliminará la lista seleccionada</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="usernameHere">Username Here</string>
    <string name="myLists">Mis Listas</string>
    <string name="createAList">Crear Una Lista</string>
    <string name="imageRecycler">Imagen del recycler cuando no hay ninguna búsqueda</string>
    <string name="webid">789300936703-lg585dme27fclh4gfj883gbmk05cc43b.apps.googleusercontent.com</string>
    <string name="aboutUs">Sobre Nosotros</string>
    <string name="aboutUsText">HitTheCooks es una app creada con fines académicos para la asignatura de Programación Multimedia y Dispositivos Móviles.
        Nace de la colaboración de 5 alumnos de segundo curso de Grado Superior de Desarrollo de Aplicaciones Multiplataforma como parte de la evaluación trimestral</string>
    <string name="student">Alumno de 2º DAM</string>
    <string name="configButtonDescription">Botón de configuración</string>
    <string name="menuBurguerDescription">Botón de Menú</string>
    <string name="userButtonDescription">Foto y botón de usuario</string>
    <string name="logoDescription">Logo de la aplicación</string>
    <string name="backButtonDescription">Botón de volver</string>
    <string name="studentPictureDescription">Retrato del colaborador</string>
    <string name="studentNameHere">Nombre de alumno aquí</string>
    <string name="backgroundDescription">Fondo de pantalla</string>
    <string name="pizzaIconDescription">Icono de pizza</string>
    <string name="userName">EMAIL</string>
    <string name="userPass">CONTRASEÑA</string>
    <string name="nameDescription">Campo con el nombre</string>
    <string name="passwordDescription">Campo con el password</string>
    <string name="signUp"><i>Registrarse</i></string>
    <string name="signIn"><b>Iniciar Sesión</b></string>
    <string name="designedBy"><i>Designed by</i></string>
    <string name="appVerseLogoDescription">AppVerse Logo</string>
    <string name="editProfileText">Editar Perfil</string>
    <string name="update">Actualizar Datos</string>
    <string name="editImage">Imagen para editar</string>
    <string name="email">EMAIL</string>
    <string name="profileImageDescription">Imagen de perfil</string>
    <string name="backArrow">Imagen flecha hacia atrás</string>
    <string name="list">Lista de Alimentos</string>
    <string name="configuration">Configuración</string>
    <string name="edit">Edita la app</string>
    <string name="editProfile">Editar perfil</string>
    <string name="theme">Tema claro / oscuro</string>
    <string name="logOut">Cerrar sesión</string>
    <string name="buttonAboutUs">Sobre Nosotros</string>
    <string name="principal">Principal</string>
    <string name="nameList">Nombre de la lista</string>
    <string name="next">Siguiente</string>
    <string name="imageListNotSelected">Tienes que seleccionar una imagen</string>
    <string name="nameListIsEmpty">El nombre de la lista no puede estar vacío</string>
    <string name="share">Comparte tu lista con otras personas</string>
    <string name="copy">Copiar</string>
    <string name="createList">Crear Lista</string>
    <string name="copiedToClipboard">Copiado en el portapapeles</string>
    <string name="invitationMessage">¡Te invito a nuestra lista de la compra!</string>
    <string name="startCreatingFirstList">¡Empieza creando tu primera lista!</string>
    <string name="listDeleted">Has borrado la lista: </string>
    <string name="listDeletionQuestion">¿Quieres borrar la lista seleccionada?</string>
    <string name="whatsappNotInstalled">Whatsapp no está instalado</string>
    <string name="registroCompletado">Registro completado</string>
    <string name="registroFallido">Registro fallido</string>
    <string name="loginIncorrecto">Login Incorrecto</string>
    <string name="cerrarSesion">Cerrando Sesión</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="searchQuestion">¿Qué quieres comprar?</string>
    <string name="productNotFound">Producto No Encontrado</string>
    <string name="cierreSesionPregunta">¿Estás segur@ de que deseas cerrar sesión?</string>
    <string name="goToList">Ir a la lista</string>
    <string name="startSearching">¡Empieza buscando tus primeros productos!</string>
    <string name="defaultPhoto">https://firebasestorage.googleapis.com/v0/b/hit-the-cooks.appspot.com/o/imagenesPerfil%2Fdefault.png?alt=media&amp;token=0e9ac66a-dca5-47c9-8059-ff4028e3cdb0</string>
    <string name="imageFood">Imagen del alimento</string>
    <string name="campoVacio">Por favor, no dejes ningún campo vacío</string>
    <string name="passCorto">El password debe tener 8 caraceteres como mínimo</string>
    <string name="googleLogin">Iniciar sesión con Google</string>
    <string name="irAPantallaListas">Botón para ir a la pantalla de crear listas</string>
    <string name="irAPerfilUsuario">Botón para ir al perfil del usuario</string>
    <string name="searcViewImagen">Scroll del SearchView</string>
    <string name="imagenWhatsapp">Imagen del icono de Whatsapp</string>
    <string name="carritoCompra">Imagen de un carrito de la compra</string>
    <string name="botonCompartir">Imagen del botón compartir</string>
    <string name="cannotAddRepeatedItem">No puedes tener varios elementos de</string>
    <string name="borrarElemento">¿Quieres borrar el elemento seleccionado?</string>
    <string name="borrarElementoConfirmacion">Se eliminará este alimento de tu lista de la compra</string>
    <string name="imageProductDescription">Imagen del producto</string>
    <string name="dialogoDescriptionç">Dialogo</string>
    <string name="backgroundShopListDescription">Fondo de las listas de la compra</string>
    <string name="emptyImage">Imagen Lista Vacia</string>
    <string name="backgroundImageList">Imagen del fondo de la lista</string>
    <string name="miguelAngelArcos">Miguel Ángel Arcos</string>
    <string name="mamenArias">Mamen Arias</string>
    <string name="manuelCarrillo">Manuel Carrillo</string>
    <string name="christianGarcia">Christian García</string>
    <string name="sergioLopez">Sergio López</string>
    <string name="moneite">moneite@gmail.com</string>ç
    <string name="mamenCorreo">mamen8191@gmail.com</string>
    <string name="manuelCorreo">m.carrillo44@gmail.com</string>
    <string name="christianCorreo">chrisak96@gmail.com</string>
    <string name="sergioCorreo">sergiolopeztorres97@gmail.com</string>
    <string name="icono">icono</string>
</resources>