<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/app_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_main"
            android:title="@string/principal"
            android:icon="@drawable/home_icon"/>

        <item
            android:id="@+id/nav_lists"
            android:title="@string/myLists"
            android:icon="@drawable/lists_icon"/>

    </group>

    <group android:id="@+id/conf_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_configuration"
            android:title="@string/configuration"
            android:icon="@drawable/setting_icon"/>

        <item
            android:id="@+id/nav_profile"
            android:title="@string/editProfile"
            android:icon="@drawable/profile_icon"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logOut"
            android:icon="@drawable/logout_icon"/>

    </group>

    <group android:id="@+id/info_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_about_us"
            android:title="@string/aboutUs"
            android:icon="@drawable/info_icon"/>

    </group>

</menu>