<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outerFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".EditProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/innerFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/menuButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/menu_icon"
            app:tint="@color/orangeEgg" />

        <ImageButton
            android:id="@+id/goBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@color/noColor"
            android:contentDescription="@string/backArrow"
            android:scaleX="2"
            android:scaleY="2"
            app:layout_constraintBottom_toBottomOf="@+id/menuButton"
            app:layout_constraintStart_toEndOf="@+id/menuButton"
            app:layout_constraintTop_toTopOf="@+id/menuButton"
            app:srcCompat="?attr/homeAsUpIndicator"
            app:tint="@color/orangeEgg"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:backgroundTint="@color/orangeEgg"
            android:fontFamily="sans-serif-black"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/appVerseIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/appVerseIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/appVerseLogoDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/logoappverse"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/editProfileText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/editProfileText"
            android:textAlignment="center"
            android:textColor="@color/whiteEgg"
            android:textSize="40sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/profileImageDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfileText"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/userName"
            android:textColor="@color/whiteEgg"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileIcon"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>