<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ConfigurationActivity">

    <ImageView
        android:id="@+id/menuButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_icon"
        app:tint="@color/orangeEgg" />

    <TextView
        android:id="@+id/labelTheme"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/theme"
        android:textColor="@color/whiteEgg"
        android:textSize="18dp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/icononoche"
        app:layout_constraintBottom_toTopOf="@+id/buttonProfile"
        app:layout_constraintEnd_toStartOf="@+id/switchNight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEdit" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/switchNight"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:lottie_rawRes="@raw/egg_toggle"
        app:layout_constraintBottom_toBottomOf="@+id/labelTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/labelTheme">

    </com.airbnb.lottie.LottieAnimationView>

    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellowEgg"
        android:drawableLeft="@drawable/iconoperfil"
        android:gravity="center"
        android:text="@string/editProfile"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTheme" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellowEgg"
        android:drawableLeft="@drawable/iconologout"
        android:gravity="center"
        android:text="@string/logOut"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonProfile" />

    <Button
        android:id="@+id/buttonMore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/yellowEgg"
        android:drawableLeft="@drawable/iconomas"
        android:gravity="center"
        android:text="@string/more"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogOut" />

    <TextView
        android:id="@+id/labelConfiguration"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:text="@string/configuration"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuButton" />

    <TextView
        android:id="@+id/labelEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="15dp"
        android:text="@string/edit"
        android:textColor="@color/whiteEgg"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelConfiguration" />

</androidx.constraintlayout.widget.ConstraintLayout>