<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/shoppingList"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="2dp"
                android:focusable="true">

                <ImageView
                    android:id="@+id/backgroundImageShoppingList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/backgroundImageList"
                    android:scaleType="centerCrop"
                    android:src="@drawable/background_list_6"></ImageView>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/shoppingListName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/shoppingListTitle"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/containerUserAndShare"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerUserImageProfile"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" />

                        <LinearLayout
                            android:id="@+id/shareContainer"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/shareCardView"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginStart="10dp"
                                android:clickable="true"
                                android:focusable="true"
                                app:cardCornerRadius="30dp"
                                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">

                                <ImageView
                                    android:id="@+id/addMemberButton"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@color/grey"
                                    android:contentDescription="@string/addList"
                                    app:srcCompat="@drawable/add_icon" />

                            </androidx.cardview.widget.CardView>
                        </LinearLayout>

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
